assets/stylesheets/previews_common.scss
//tiles styling  specific styling
#list-area.tiles-style {

  .grid {
    display:block;
    .topic-list-item-separator {
      display: none;
    }
  }

  .grid-sizer,
  .grid-item {
    // 1 column on very thin views
    width: 100%;
    // 2 columns on medium widths
    @media screen and (min-width: 401px) and (max-width: 800px) {
      width: calc((100% - 6px)/2);
    }
    // 3 columns when there is room
    @media screen and (min-width: 801px) {
      width: calc((100% - 12px)/3);
    }
  }

  .gutter-sizer {
     width: 6px;
   }

  .grid-item {
    box-sizing: border-box;
    cursor: pointer;
    float:top;
    margin-bottom: 6px;
    border-radius: 3px;
    padding:10px;
    display: grid;
    grid-template-columns: 1 1 1 1 auto;
    grid-template-rows: auto auto auto auto auto;
    grid-template-areas:
     "theader theader theader theader theader"
     "photo photo photo photo photo"
     "details details details details details"
     "tags tags tags tags tags"
     "meta meta meta meta actions"
  }

  .grid-item:hover {
    background-color: darken($secondary, 2%);
    lighten: ($primary, 70%);
  }

  .grid-item:active {
  }

  .topic-header-grid {
    grid-area: theader;
    display: grid;
    grid-template-columns: auto auto;
    grid-template-rows: auto auto;
    grid-template-areas:
    "title posters"
    "category posters"
  }

  .topic-title {
    font-size: 1.143em;
    grid-area: title;
    padding: 0 0 0 0;

     .link-top-line {
       flex: 1 1 auto;
     }

    a.title {
      color: $primary;
    }

    a.topic-featured-link {
      display: block;
      padding-left: 0;
      padding-top: 3px;
    }

    .badge-notification.new-topic {
      vertical-align: top;
      display: inline-block;
    }
  }

  .topic-users {
    grid-area: posters;
    padding: 0 0 5px 5px;

    .inline {
      float: right;
      line-height: 24px;
      text-align: right;

      .avatar {
        padding: 0 0 0 0px;
        margin-right: -2px;
        width: 22px;
        height: 22px;
      }
    }
  }

  .topic-statuses {
    float: right;
  }

  .topic-category{
    grid-area: category;
    padding: 0 0 4px 0;
  }

  .topic-thumbnail{
    grid-area: photo;
    padding: 0 0 4px 0;
  }

  .thumbnail {
    .no-thumbnail {
      display: none;
    }
  }

  .topic-details {
    grid-area: details;
    padding: 0 0 4px 0;

    .topic-excerpt {
      line-height: 1.3;
      max-height: 200px;
      max-width: 100%;
      float: left;
      clear: both;
    }
  }

  .topic-tags {
    grid-area: tags;
  }

  .topic-meta{
    grid-area: meta;
  }

  .topic-poster-names a {
    font-size: 0.9em;
  }

  div.sub, span.sub {
    padding: 0;
    font-size: 12px;
  }

  .topic-list{
    padding-top: 10px;
  }

  .list-tags {
    padding-right: 10px;
  } 

  a.topic-featured-link {
    display: inline-block;
    padding-left: 0;
    padding-top: 3px;
  }

  .topic-meta {
    float: left;
  }

  .topic-actions {
    grid-area: actions;
    float: right;
    justify-content: flex-end;
    text-align: right;
    vertical-align: bottom;
  }
}

.topic-thumbnail {
  float: left;
  padding-right: 15px;

  .no-thumbnail {
    display: none;
  }
}

.topic-list .main-link a.title {
  padding: 0;
}

html:not(.mobile-view) #list-area.social-style, #suggested-topics .social-style {
  .show-more {
    top: 0;
  }

  .topic-statuses {
    float: right;
  }

  .topic-list-item {
    border-radius: 3px;
    display: inline-block;
    width: 100%;

    td:not(.main-link) {
      display: none;
    }
  }

  .topic-list-item-separator {
    display: inline-block;
    width: 100%;
    margin-bottom: 10px;

    td {
      display: block;
    }
  }

  img.thumbnail {
    max-width: 100%;
  }

  div.inline, span.inline {
    float: none;
    display: inline-flex;
    vertical-align: middle;
    padding: 0 5px 0 0;
    margin: 0;
    line-height: 20px;

    .badge-wrapper {
      margin: 0;
    }

    .number {
      margin-right: 3px;
    }
  }

  .topic-poster-names a {
    font-size: 0.9em;
  }

  div.sub, span.sub {
    padding: 0;
    font-size: 0.8em;
  }
}

img.thumbnail {
  object-fit: cover;
}

.middot:after {
  content: '\00B7';
}

#list-area.social-style .contents, #suggested-topics .social-style .contents {
  .main-link {
    display: block;
  }

  .topic-details {
    float: left;
    max-height: none;
  }

  .topic-intro, .topic-thumbnail {
    padding: 0;
    margin: 7px 0;
  }

  .badge-wrapper.box {
    margin: 0px;
  }

  .topic-list-item td {
    padding: 15px;
  }

  .topic-title {
    font-size: 1.143em;
    display: flex;

    .link-top-line {
      flex: 1 1 auto;
    }

    a.title {
      color: $primary;
    }

    a.topic-featured-link {
      display: block;
      padding-left: 0;
      padding-top: 3px;
    }

    .badge-notification.new-topic {
      vertical-align: top;
      display: inline-block;
    }

    .topic-users {
      float: right;

      .inline {
        padding: 0 0 0 5px;
      }
    }
  }

  .topic-replies {
    cursor: pointer;

    a.badge-posts {
      line-height: 20px;
    }
  }

  .topic-excerpt {
    float: none;
    display: inline-block;
  }

  .topic-meta-social {
    float: right;
  }

  .discourse-tags {
    font-size: 1em;
  }

  .topic-details {
    width: 100%;
  }

  .activity, .age {
    width: initial;
  }

  .list-button {
    padding: 0;
  }

  .topic-footer {
    display: flex;
    justify-content: space-between;
  }
}

.topic-details {
  overflow: hidden;
  padding-top: 1px;

  &:before {
    float: left;
  }

  .topic-excerpt {
    margin-top: 2px;
    padding-right: 10px;
    overflow: hidden;
    line-height: 1.3;
    max-height: 60px;
    float: top;
    clear: both;
    cursor: pointer;
  }
}

.topic-list span.badge-category .category-name {
    max-width: 250px;
}

.main-link .topic-category {
  display: inline-block;
  clear: left;
}

html:not(.tile-style) .topic-actions {
  float: left;
  clear: both;
  display: flex;
  align-items: center;
}

.like-count, .list-vote-count {
  color: dark-light-choose(scale-color($primary, $lightness: 60%), scale-color($secondary, $lightness: 40%));
  font-size: 13px;
  display: inline-block;
  vertical-align: bottom;
  margin-right: 7px;

  .vote-count {
    height: initial;
    line-height: initial;
    font-weight: initial;
  }
}

.list-vote-count {
  float: left;
  padding-right: 3px;
  margin-top: 5px;
}

.topic-actions .list-vote-count {
  float: none;
  margin-top: 0;
}

button.list-button {
  font-size: 0.9em;
  background: transparent;
  border: none;
  padding: 2px 4px;
  overflow: hidden;

  &:first-of-type {
    padding-left: 0;
  }

  i {
    vertical-align: bottom;
  }

  &.has-like, &.topic-like:not([disabled]):hover {
    color: $love;
  }

  &.has-like[disabled]:hover {
    background: transparent;
  }

  &.has-like[disabled]:active {
    box-shadow: none;
  }

  &.bookmarked, &.topic-bookmark:hover {
    i.fa-bookmark, .d-icon-bookmark {
      color: $tertiary;
    }
  }
}

.user-main .list-button {
  .fa-heart, .d-icon-heart {
    color: inherit !important;
  }

  &.has-like {
    .fa-heart, .d-icon-heart {
      color: $love !important;
    }
  }
}

.category-custom-settings-outlet {
  .select2-container {
    width: 100%
  }

  .input-small {
    width: 60px;
  }
}

.tlp-featured-topics.has-topics {
  display: inline-block;
  width: 100%;

  .topics {
    padding: 0 10px;
    display: flex;
    overflow-x: auto;
    overflow-y: hidden;

    .tlp-featured-topic {
      margin-right: 10px;
      cursor: pointer;
      position: relative;

      &.show-details .featured-details {
        background-color: rgba(62, 66, 79, 0.8);

        .content, .content a {
          color: $secondary;
        }

        .content a.mention {
          background-color: $primary-high;
        }

        img {
          visibility: visible;
        }
      }

      .title {
        font-weight: 700;
        margin-bottom: 7px;
      }

      .user {
        position: absolute;
        bottom: 10px;
        right: 10px;

        img {
          margin-left: 5px;
        }
      }
    }

    .featured-details {
      transition: background-color 200ms linear;
      background-color: rgba(0,0,0,0);
      padding: 15px;
      position: absolute;
      top: 0;
      bottom: 0;
      left: 0;
      right: 0;

      .content, .content a {
        color: transparent;
        background-color: transparent;
        transition: background-color 200ms linear;
        transition: color 200ms linear;
      }

      img {
        visibility: hidden;
        transition: visibility 100ms linear;
      }

      .excerpt {
        padding-bottom: 15px;
      }
    }
  }

  .featured-tags {
    margin-top: 10px;
    padding-right: 10px;
    float: right;
  }
}

.social-footer {
  width: 100%;
  display: inline-flex;
  align-items: center;

  .topic-rating {
    font-size: 0.8em;
  }

  .topic-meta {
    margin-left: auto;
  }
}

